[package]
name = "dsmr"
version = "0.3.0"
authors = ["Victor Roest <victor@xirion.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsmr5 = { git = "https://github.com/NULLx76/dsmr5" }
serial = "0.4.0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
rumqttc = "0.22"

[profile.release]
lto = true

[[bin]]
path = "src/main.rs"
name = "dsmr"
